# 216-scalable-heavy-hitters

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  common.cpp  common.h  heavy_hitters.cpp  heavy_hitters.sln  heavy_hitters.vcxproj  heavy_hitters.vcxproj.filters  preprocess.cpp  preprocess_gen.cpp
common/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  common.cpp  common.h  common.vcxproj  common.vcxproj.filters  data.h  log.cpp  log.h  safe_queue.cpp  safe_queue.h
common/common.dir/Debug/common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+2 more)
data/: fake.csv  fake_letters.csv  filmtv_movies.csv  letters_small.csv  oscar_small.csv  test.csv
doc/: evaluation_rick.md
processor/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  count_reporter.cpp  count_reporter.h  data_preprocessor.h  data_preprocessor_impl.cpp  data_preprocessor_impl.h  default_hasher.cpp  default_hasher.h  fake_preprocessor.h  fake_reporter.cpp  fake_reporter.h  filter.h  hasher.h  multistage_filter.cpp  multistage_filter.h  naive_filter.h  naive_hasher.cpp  naive_hasher.h  net_flow.cpp  net_flow.h  processor.cpp  processor.h  processor.vcxproj  processor.vcxproj.filters  reporter.h  sample_and_hold.cpp  sample_and_hold.h
sample_and_hold/: run.sh  sample_and_hold.cpp  sample_and_hold.h
(+13 files in other folders)
